# tg-mcp

./: .clinerules  .env.sample  .gitignore  .mcp.json  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_RENAME_INSTRUCTIONS.md  LICENSE  Makefile  PROJECT_MAP.md  PROJECT_MAP_AND_RENAME_PLAN.md  README.md  RENAME_INSTRUCTIONS.md  page.html  pytest.ini  requirements.txt  s16-leads.code-workspace  worm.html
docs/: ACTION_POLICY_TOGGLES.md  AGENT_PLAYBOOK.md  ANTISPAM_IMPROVEMENTS_PLAN.md  ANTISPAM_SECURITY.md  ANTI_SPAM_OVERVIEW_EN.md  ARCHITECTURE_FOR_DESIGN.md  ARCHITECTURE_SIMPLE.md  CODE_REVIEW_CHECKLIST.md  DEMO_LOGIC.md  ENV_SAMPLE_UPDATED.md  EXPORT_MESSAGES_GUIDE.md  GPT5_ARCHITECTURE_DISCUSSION.md  GROUP_CREATION_DATE.md  HELLO_AGENT.md  REPO_SPLIT_PLAN.md  SAFE_EXPORT_STRATEGY.md  SHIPYARD_COHORT_1_SUMMARY.md  TELEGRAM_API_PATTERNS.md  TRANSFER_GUIDE.md  telegram_observability_stack.md
gconf/: AGENTS.md  CONTEXT.md  __init__.py
scripts/: bump_version.py  check_anti_spam_compliance.py  check_env.py  check_tg_mcp.sh  create_session_qr.py  (+3 more)
tganalytics/: mcp_actions_batch.py  mcp_actions_policy.py  mcp_actions_state.py  mcp_server.py  mcp_server_actions.py  mcp_server_common.py  mcp_server_read.py  pyproject.toml
tganalytics/examples/: create_telegram_session.py  demo_session_antispam.py  export_group_messages.py  export_project_analytics.py  list_my_chats.py  send_group_message.py  test_group_functions.py
tganalytics/tganalytics/domain/: groups.py
tganalytics/tganalytics/infra/: limiter.py  metrics.py  tele_client.py
(+64 files in other folders)
